--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,18 @@
+
+/* スマホ向け (最大幅600px) */
+@media screen and (max-width: 600px) {
+    h1, h2, h3, h4 {
+        font-size: 14px; /* スマホでは少し小さく */
+    }
+}
+
+/* タブレット向け (最大幅768px) */
+@media screen and (max-width: 768px) {
+    h1, h2, h3, h4 {
+        font-size: 15px; /* タブレット向け */
+    }
+}
+
 .page-header {
     background-color: #C25100;
     margin-top: 0;
