--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,32 +1,18 @@
-
-/* スマホ向け (最大幅600px) */
-@media screen and (max-width: 600px) {
-    h1, h2, h3, h4 {
-        font-size: 14px; /* スマホでは少し小さく */
-    }
-}
-
-/* タブレット向け (最大幅768px) */
-@media screen and (max-width: 768px) {
-    h1, h2, h3, h4 {
-        font-size: 15px; /* タブレット向け */
-    }
-}
-
 .page-header {
     background-color: #C25100;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 20px; /* 左右のパディングを調整 */
+    text-align: center; /* 見出しを中央寄せ */
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 2em; /* 相対的なフォントサイズ */
     text-decoration: none;
 }
 
 .content {
-    margin-left: 40px;
+    padding: 20px; /* 左右のパディングを調整 */
 }
 
 h1, h2, h3, h4 {
@@ -38,18 +24,22 @@ h1, h2, h3, h4 {
 }
 
 .save {
-    float: right;
+    text-align: right; /* 右寄せ */
 }
 
 .post-form textarea, .post-form input {
     width: 100%;
 }
 
+.post-form button {
+    float: right;
+}
+
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
+    font-size: 1.5em; /* 相対的なフォントサイズ */
+    text-align: right; /* 右寄せ */
+    display: block; /* ブロック要素として表示 */
 }
 
 .post {
@@ -59,3 +49,34 @@ h1, h2, h3, h4 {
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
+
+/* スマホ向け (最大幅767px) */
+@media (max-width: 767px) {
+    .page-header {
+        padding: 10px; /* スマホではパディングを小さく */
+    }
+
+    .page-header h1 {
+        font-size: 1.5em; /* スマホでは見出しを小さく */
+    }
+
+    .content {
+        padding: 10px; /* スマホではパディングを小さく */
+    }
+
+    .col-md-8 {
+        width: 100%; /* スマホでは全幅表示 */
+    }
+
+    .top-menu {
+        font-size: 1.2em; /* スマホではアイコンを小さく */
+    }
+}
+
+/* タブレット向け (768px以上991px以下) */
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-8 {
+        width: 100%; /* タブレットでも全幅表示 */
+    }
+}
+
