--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
             <div class="comment">
                 {{ forloop.counter }}, &ensp;
                 {% if comment.author != 'shohei' %}
-                管理人
+                匿名
                 {% else %}
                 {{ comment.author }}
                 {% endif %}
@@ -30,7 +30,7 @@
         <h2>Add a comment</h2>
         <form method="POST" class="post-form">{% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <button type="submit" class="save btn btn-default">投稿</button>
         </form>
     
     </div>
