--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -2,6 +2,8 @@
 {% load static %}
 <html lang="ja">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021009005741518"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>トップページ</title>
