--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,6 +2,8 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021009005741518"
+     crossorigin="anonymous"></script>
         <title>>Nakajima Channels</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
