--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -71,6 +71,17 @@ nav a {
     padding: 180px 0;
 }
 
+.analytic-main {
+    background-image: url("../img/analytic.png"); /* 背景画像 */
+    width: 100%;
+    height: 160px;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    text-align: center;
+    /* padding: 100px 0; */
+}
+
 .services {
     padding: 50px 0;
 }
