--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -6,7 +6,10 @@
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>トップページ</title>
+    <title>中島ナビ</title>
+    <meta name="description" content="西淀川区中島の情報サイト、中島ナビでは住民の方が知りたい情報を共有しています。
+    また、住民同士がコミュニケーションをとることができる中島チャンネルを提供しており、そこでの情報が中島ナビに活用され、
+    さらに良い情報ツールとして機能します。">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -16,7 +19,6 @@
             <nav>
                 <ul>
                     <li><a href="#">🏠</a></li>
-                    <li><a href="#">☎️</a></li>
                 </ul>
             </nav>
         </div>
