--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,8 +3,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021009005741518"
-     crossorigin="anonymous"></script>
-        <title>>Nakajima Channels</title>
+        crossorigin="anonymous"></script>
+        {% block head %}
+        <title>Nakajima Channnel ~西淀川区中島の情報サイト&掲示板~</title>
+        <meta name="description" content="西淀川区中島のあらゆる情報をアップロードしています。また、住民の皆様が交流することにより、集まった情報をわかりやすい形で提供することにより、住民の皆様の生活の向上に取り組んでいます。">
+        {% endblock %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
