コメントにリンク機能付与

--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -45,7 +45,7 @@
                         <p>天気、ごみ収集日、皆様の暮らしに役立つ情報を網羅しています。</p>
                     </div>
                     <div class="service-item">
-                        <h3>解析(準備中)</h3>
+                        <div class="life"><a href="{% url 'analytic' %}"><h3>解析(準備中)</h3></a></div>
                         <p>掲示板を解析し、住民の需要や関心ごとを解析します。中島の環境整備や行政への働きかけを行なっていきます</p>
                     </div>
                     <div class="service-item">
