--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load humanize %}
 
 {% block content %}
     <div class="post">
@@ -26,7 +27,10 @@
                 </h5>
             </div>
             <div class="comment_contents">
-                <h5 class="comment_text">{{ comment.text|linebreaksbr }}</h5>
+            
+
+            <p>{{ text|urlize }}</p>
+                <h5 class="comment_text">{{ comment.text|urlize|linebreaksbr }}</h5>
             </div>
         {% endfor %}
         
