--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <h1><a href="/">Nakajima Channels</a></h1>
         </div>
-        <div><a href="{% url 'top' %}">中島ナビへ>></a></div>
+        <div class="content container"><a href="{% url 'top' %}">中島ナビへ>></a></div>
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
