プライバシポリシー、規約追加

--- a/blog/templates/blog/analytic.html
+++ b/blog/templates/blog/analytic.html
@@ -23,10 +23,13 @@
         </section>
 
     </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Nakajima-Navi.com</p>
+    <footer style="background-color: #333; color: #fff; padding: 30px; text-align: center;">
+        <div style="margin-bottom: 20px;">
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-twitter"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-facebook"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-instagram"></i></a>
         </div>
-    </footer>
+        <p>&copy; 2025 Nakajima-navi | <a href="{% url 'policy' %}" style="color: #fff;">プライバシーポリシー</a> | <a href="{% url 'term' %}" style="color: #fff;">利用規約</a></p>
+      </footer>
 </body>
 </html>
