--- a/blog/templates/blog/life.html
+++ b/blog/templates/blog/life.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>暮らし</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
     <header>
@@ -26,10 +27,13 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Nakajima-Navi.com</p>
+    <footer style="background-color: #333; color: #fff; padding: 30px; text-align: center;">
+        <div style="margin-bottom: 20px;">
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-twitter"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-facebook"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-instagram"></i></a>
         </div>
-    </footer>
+        <p>&copy; 2025 Nakajima-navi | <a href="{% url 'policy' %}" style="color: #fff;">プライバシーポリシー</a> | <a href="{% url 'term' %}" style="color: #fff;">利用規約</a></p>
+      </footer>
 </body>
 </html>
