--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -62,10 +62,13 @@
         </section>
     </main>
     <style>.max_temp{display:inline-block !important}.min_temp{display:inline-block !important}.temp{display:block !important}.rain_s{display:block !important}.pop-rain{undefined}.speed-wind{undefined}.deg-wind{undefined}.w_snow{undefined}.w_bg{background:linear-gradient(to right,#ff5722, #fff)}</style><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons.min.css"><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons-wind.css"><link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script type="text/javascript">weather_value=7;lat = 34.711388;lon =135.456116;inputText1 = "大阪府大阪市西淀川区";search_add = "大阪府大阪市西淀川区";</script><script src="https://sitecreation.co.jp/wp-content/themes/sango-theme-child/tpl/weather.js"></script><link id="PageStyleSheet" rel="stylesheet" href="https://sitecreation.co.jp/wp-content/themes/sango-theme-child/tpl/style.css"><div id="weather-wrapper"><div id="weather1"></div><div id="weather2"></div></div>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Nakajima-Navi.com</p>
+    <footer style="background-color: #333; color: #fff; padding: 30px; text-align: center;">
+        <div style="margin-bottom: 20px;">
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-twitter"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-facebook"></i></a>
+          <a href="#" style="color: #fff; margin: 0 10px;"><i class="fab fa-instagram"></i></a>
         </div>
+        <p>&copy; 2025 Nakajima-navi | <a href="{% url 'policy' %}" style="color: #fff;">プライバシーポリシー</a> | <a href="{% url 'term' %}" style="color: #fff;">利用規約</a></p>
     </footer>
 </body>
 </html>
