--- a/blog/templates/blog/life.html
+++ b/blog/templates/blog/life.html
@@ -21,6 +21,45 @@
 
         <section class="services">
             <div class="container">
+                    <div class="garbage_container">
+                        <h1>ごみ収集日(中島1丁目)</h1>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>ごみの種類</th>
+                                    <th>曜日</th>
+                                    <th>時間帯</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>普通ごみ</td>
+                                    <td>火曜日・金曜日</td>
+                                    <td>8:30〜10:30</td>
+                                </tr>
+                                <tr>
+                                    <td>資源ごみ</td>
+                                    <td>木曜日</td>
+                                    <td>8:30〜10:30</td>
+                                </tr>
+                                <tr>
+                                    <td>プラスチック資源</td>
+                                    <td>月曜日</td>
+                                    <td>8:30〜10:30</td>
+                                </tr>
+                                <tr>
+                                    <td>古紙・衣類</td>
+                                    <td>月曜日</td>
+                                    <td>13:00〜15:00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <a href="https://www.city.osaka.lg.jp/contents/wdu150/trashmap/kumap24.html?ku=%E8%A5%BF%E6%B7%80%E5%B7%9D%E5%8C%BA&file=nishiyodogawa">
+                            ※大阪市のごみ収集日を調べる</a>
+                    </div>
+
+            </div>
+            <div class="container">
                 <h2>天気</h2>
                 <style>.max_temp{display:inline-block !important}.min_temp{display:inline-block !important}.temp{display:block !important}.rain_s{display:block !important}.pop-rain{undefined}.speed-wind{undefined}.deg-wind{undefined}.w_snow{undefined}.w_bg{background:linear-gradient(to right,#ff5722, #fff)}</style><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons.min.css"><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons-wind.css"><link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script type="text/javascript">weather_value=7;lat = 34.711388;lon =135.456116;inputText1 = "大阪府大阪市西淀川区";search_add = "大阪府大阪市西淀川区";</script><script src="https://sitecreation.co.jp/wp-content/themes/sango-theme-child/tpl/weather.js"></script><link id="PageStyleSheet" rel="stylesheet" href="https://sitecreation.co.jp/wp-content/themes/sango-theme-child/tpl/style.css"><div id="weather-wrapper"><div id="weather1"></div><div id="weather2"></div></div>
 
