--- a/blog/templates/blog/life.html
+++ b/blog/templates/blog/life.html
@@ -18,6 +18,38 @@
     <main>
         <section class="life-main">
         </section>
+        <section class="gasoline_data">
+            <div class="garbage_container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ガソリンスタンド</th>
+                            <th>レギュラー</th>
+                            <th>軽油</th>
+                            <th>備考</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>大和田SS</td>
+                            <td>？？</td>
+                            <td>？？</td>
+                            <td>３or５円引きラインクーポンあり</td>
+                        </tr>
+                        <tr>
+                            <td>出来島SS</td>
+                            <td>？？</td>
+                            <td>？？</td>
+                            <td>セルフ</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>上記はナカジマナビ調べ。<br>
+                    <a href="https://gogo.gs/">ガソリン価格を調べるならgogo.gs</a></p>
+        
+            </div>    
+        </section>
+
 
         <section class="services">
             <div class="container">
