--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021009005741518"
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -60,6 +61,18 @@
                 </div>
             </div>
         </section>
+
+        <!-- --------------mission and promise section -->
+        <section>
+            <div class="container">
+                <a href="{% url 'mission_promise' %}"><h2> Mission & Promise </h2></a>
+                <p>デジタルの力で地域の暮らしに新しい風を。</p>
+                
+            </div>
+        
+
+        </section>
+        <!-- -------------- -->
     </main>
     <footer style="background-color: #333; color: #fff; padding: 30px; text-align: center;">
         <div style="margin-bottom: 20px;">
