--- a/blog/templates/blog/life.html
+++ b/blog/templates/blog/life.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>暮らし</title>
