ガソリン価格追加

--- a/blog/templates/blog/life.html
+++ b/blog/templates/blog/life.html
@@ -33,9 +33,11 @@
                     <tbody>
                         <tr>
                             <td>大和田SS</td>
-                            <td>？？</td>
-                            <td>？？</td>
-                            <td>３or５円引きラインクーポンあり</td>
+                            <td>186円/L</td>
+                            <td>166円/L</td>
+                            <td>３or５円引きラインクーポンあり
+                                <a href="https://linevoom.line.me/user/_dRbpzc93B5im1BpmOKwLiDGljnjHUxt9u1tx2P4">line登録する</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>出来島SS</td>
