--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -64,7 +64,7 @@
 
         <!-- --------------mission and promise section -->
         <section>
-            <div class="container">
+            <div class="container_center">
                 <a href="{% url 'mission_promise' %}"><h2> Mission & Promise </h2></a>
                 <p>デジタルの力で地域の暮らしに新しい風を。</p>
                 
