--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <div class="date">
-                {{ post.published_date }}
+                {{ post.published_date|date:"Y/n/j" }}, update {{post.updated_date|date:"Y/n/j"}}
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <div class="post_list_contents"><p>{{ post.text|linebreaksbr }}</p></div>
