--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,8 @@
             </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
+        {% if post.image %}
+        <img src="{{ post.image.url }}" alt="{{ post.title }}">{% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 
