--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,9 @@
                 {{ post.published_date|date:"Y/n/j" }}, update {{post.updated_date|date:"Y/n/j"}}
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <div class="post_list_contents"><p>{{ post.text|linebreaksbr }}</p></div>
+            {% if post.image %}
+            <img src="{{ post.image.url }}" alt="{{ post.title }}">{% endif %}
+            <!-- <div class="post_list_contents"><p>{{ post.text|linebreaksbr }}</p></div> -->
         </div>
     {% endfor %}
 {% endblock %}
