--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,10 +23,11 @@
     </head>
     <body>
         <div class="page-header">
+            <a href="{% url 'top' %}" class="top-menu"><h5> ナカジマナビへ >> </h5></a>
             <a href="{% url 'post_new' %}" class="top-menu"><h5>new post   <span class="glyphicon glyphicon-plus"></span></h5></a>
             <h1><a href="/">Nakajima Channels</a></h1><h5>ナカジマチャンネル</h5>
         </div>
-        <div class="content container"><a href="{% url 'top' %}">中島ナビへ>></a></div>
+        <div class="content container"><a href="{% url 'post_list' %}"> << ナカジマチャンネルのトップへ</a></div>
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
