--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -34,9 +34,16 @@
             {% if comment.image %}
             <img src="{{ comment.image.url }}" alt="{{ comment.title }}" style="width: auto; height: 80px;">{% endif %}
     
-            <form action="{% url 'like_post_url' post_id=post.id comment_id=comment.id %}" method ="POST">{% csrf_token %}
+            <!-- <form action="{% url 'like_post_url' post_id=post.id comment_id=comment.id %}" method ="POST">{% csrf_token %}
                 <button type="submit" name="like_button" value="1" class="save btn btn-default">👍{% if comment.good != None %}+{{comment.good}}{% endif %}</button>
-            </form>
+            </form> -->
+            <form action="{% url 'like_post_url' post.id comment.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" name="like_button" value="1" class="save btn btn-default"
+                    {% if comment.id in liked_comments %}disabled{% endif %}>
+                    👍{% if comment.good != None %}+{{comment.good}}{% endif %}
+                </button>
+            </form>            
             <br/>
             </div>
         {% endfor %}
