カテゴリと検索を修正

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,6 +23,7 @@
             {% endblock %}
         </style>
         {% block script %}
+        
         {% endblock %}
     </head>
     <body>
@@ -32,6 +33,9 @@
             <h1><a href="/">Nakajima Channels</a></h1><h5>ナカジマチャンネル</h5>
         </div>
         <div class="content container"><a href="{% url 'post_list' %}"> << ナカジマチャンネルのトップへ</a></div>
+        <!-- 検索ボタン -->
+        <div class="content container">
+            <a href="{% url 'search_post' %}" class="search-button"><<検索画面へ</a></div>
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
