--- a/gomimon/templates/gomimon/map.html
+++ b/gomimon/templates/gomimon/map.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-    <link rel="stylesheet" href="{% static 'css/poisute.css' %}">
+    <link rel="stylesheet" href="{% static 'css/map.css' %}">
     <style>
         #mapid { height: 500px; } /* 地図の高さ */
         .hidden { display: none; }
@@ -35,7 +35,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" crossorigin=""></script>
-    <script src="{% static 'script/get_location.js' %}"></script>
+    <script src="{% static 'script/locate.js' %}"></script>
     <script src="{% static 'script/map.js' %}"></script>
 </body>
 </html>
